# 9cc

./: .gitignore  9cc.c  9cc.h  CMakeLists.txt  Makefile  build.ninja  codegen.c  main.c  parse.c  test.sh  type.c
